# ExcelParser

./: .gitleaks.toml  CMakeLists.txt  Dockerfile  breakPointController.cpp  breakPointController.h  indexPair.cpp  indexPair.h  listFileRec.cpp  listFileRec.h  main.cpp
QXlsx/source/: main1.cpp
